--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pull-stream": "^2.28.4",
     "ssb-client": "^2.0.0",
     "ssb-msg-schemas": "^6.0.0",
+    "statistics": "^2.0.0",
     "stream-to-pull-stream": "^1.6.6"
   },
   "devDependencies": {},
