--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "url": "git://github.com/dominictarr/experiments.git"
   },
   "dependencies": {
+    "marked": "^0.3.5",
+    "osenv": "^0.1.3",
     "pull-paramap": "^1.1.3",
     "pull-stream": "^2.28.4",
+    "pull-window": "^2.1.3",
     "ssb-client": "^2.0.0",
+    "ssb-marked": "^0.5.4",
     "ssb-msg-schemas": "^6.0.0",
     "statistics": "^2.0.0",
     "stream-to-pull-stream": "^1.6.6"
